--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-hook-form": "^7.49.3",
+    "react-icons": "^5.0.1",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
