--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
+    "react-hook-toast": "^0.0.3",
     "react-icons": "^5.0.1",
     "zustand": "^4.5.0"
   },
