--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@prisma/client": "^5.9.0",
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.1",
     "next": "14.1.0",
     "next-auth": "^4.24.5",
+    "next-cloudinary": "^5.20.0",
     "query-string": "^8.1.0",
     "react": "^18",
     "react-dom": "^18",
