--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^5.9.0",
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
+    "date-fns": "^3.3.1",
     "dotenv": "^16.4.1",
     "next": "14.1.0",
     "next-auth": "^4.24.5",
