--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "@prisma/client": "^5.9.0",
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
-    "date-fns": "^3.3.1",
+    "date-fns": "2.30.0",
     "dotenv": "^16.4.1",
     "next": "14.1.0",
     "next-auth": "^4.24.5",
     "next-cloudinary": "^5.20.0",
     "query-string": "^8.1.0",
     "react": "^18",
+    "react-date-range": "^1.4.0",
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
     "react-hot-toast": "^2.4.1",
@@ -30,6 +31,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/react-date-range": "1.4.4",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
