--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-select": "^5.8.0",
+    "react-spinners": "^0.13.8",
     "world-countries": "^5.0.0",
     "zustand": "^4.5.0"
   },
