--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.9.0",
+    "@vercel/analytics": "^1.1.3",
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "date-fns": "2.30.0",
